Enable registration schedule again.

--- a/source/room_stats/templates/room_stats/widgets/modal_add_homeserver.html
+++ b/source/room_stats/templates/room_stats/widgets/modal_add_homeserver.html
@@ -11,7 +11,7 @@
 
         <span class="caption">The registration may take up to one hour. Typically it starts at xx:00 each hour. The server should be visible in about 2 minutes after it was added.</span>
 
-        <input name="hostname" placeholder="example.com (FUNCTIONALITY TEMPORALLY DISABLED)"/>
+        <input name="hostname" placeholder="example.com"/>
 
         <button class="g-recaptcha ureset-button" data-badge="inline" data-theme="dark" data-sitekey="6LegaE4UAAAAAL74MnoU4CR9xRTNsKfeMu1z3BxT" data-callback="reHomeserverSubmit" data-error-callback="function(){}">Add</button>
 
