--- a/source/room_stats/templates/room_stats/homeservers.html
+++ b/source/room_stats/templates/room_stats/homeservers.html
@@ -12,7 +12,7 @@
       $('#homeservers').DataTable({
         paging: false,
         info: false,
-        aaSorting: [[1, 'desc']]
+        aaSorting: [[1, 'desc'], [2, 'asc']]
       });
     });
   </script>
@@ -50,7 +50,7 @@
         </a>
       </td>
       <td title="total/self-sufficient rooms" data-order="{{ server.owned }}">{{ server.room_disp }}</td>
-      <td>{{ server | display_server_status  }}</td>
+      {{ server | display_server_status  }}
       {{ server | display_server_sync_state }}
       <td class='text-center'>{{ server | highlight_sync_delta }}</td>
       {% for date,stat in server.stats.items %}
