--- a/source/room_stats/templates/room_stats/base.html
+++ b/source/room_stats/templates/room_stats/base.html
@@ -49,6 +49,7 @@
         <a itemprop="url" href="{% url 'categories' %}">Categories</a>
         <a itemprop="url" href="{% url 'tags' %}">Tags</a>
         <a itemprop="url" href="{% url 'homeservers' %}">Homeservers</a>
+        <a itemprop="url" href="{% url 'faq' %}">FAQ</a>
         <a itemprop="url" href="{% url 'about' %}">About</a>
       </div>
     </nav>
