--- a/source/room_stats/templates/room_stats/faq.html
+++ b/source/room_stats/templates/room_stats/faq.html
@@ -61,8 +61,8 @@
 
     <div id="does-the-bot-steal-my-chats">
       <h3>Does the bot steal my chats?</h3>
-      <p>No. The bot doesn't store messages in any way. It's only used for collecting statistical data.</p>
-      <p>While we can't guarantee this in any reliable way, we belive that project goals are transparent enough to not consider the bot as a threat. It's also just a room member, so its behavior should be considered in the same way.</p>
+      <p>No. The bot doesn't store messages in any way. It's only used to collect statistical data.</p>
+      <p>While we can't guarantee this in any reliable way, we belive that project goals are transparent enough not to consider the bot as a threat. It's just a room member and its behavior should be considered in the same way.</p>
     </div>
 
     <div id="why-does-the-bot-have-different-mxid">
