--- a/source/room_stats/templates/room_stats/faq.html
+++ b/source/room_stats/templates/room_stats/faq.html
@@ -42,8 +42,9 @@
 
     <div id="what-is-matrixstats">
       <h3>What is matrixstats?</h3>
-      <p>Matrixstats is a public catalog for matrix rooms. It provides an easy way to navigate a lot rooms from public homeservers and sort them in different ways.</p>
+      <p>Matrixstats is a public catalog for matrix rooms. It provides an easy way to navigate a lot of rooms from public homeservers and sort those rooms in different ways.</p>
     </div>
+
 
     <h2 id="bot">Bot</h2>
 
