Fix errors in FAQ.

--- a/source/room_stats/templates/room_stats/faq.html
+++ b/source/room_stats/templates/room_stats/faq.html
@@ -68,7 +68,7 @@
 
     <div id="why-does-the-bot-have-different-mxid">
       <h3>Why does the bot have different MXID for each homeserver?</h3>
-      <p>We decided to split registrations between the homeservers for a few reasons. First, it allows to collect rooms from disconnected federations, i.e each server can be queried for its own rooms even if they not federated. Some rooms may be interesting for visitors, but unavailable in default ways. Second, it allows to query server as regular user and collect health statistics like number of successfull/failed sync requests. This information can be used to notify users about the server problems. And third, distributed systems can be more fail-tolerant in case of some fedetation-level issues.</p>
+      <p>We decided to split registrations between the homeservers for a few reasons. First, it allows to collect rooms from disconnected federations, i.e each server can be queried for its own rooms even if they not federated. Some rooms may be interesting for visitors, but unavailable in usual ways. Second, it allows to query the server as regular user and collect health statistics like number of successful/failed sync requests. This information can be used to notify users about the server problems. And third, distributed systems can be more fail-tolerant in case of some federation-level issues.</p>
     </div>
 
     <div id="does-the-bot-put-a-high-load">
