--- a/source/room_stats/templates/room_stats/faq.html
+++ b/source/room_stats/templates/room_stats/faq.html
@@ -19,7 +19,7 @@
       <li><a href="#what-is-matrixstats">What is matrixstats?</a></li>
 
       <h2 id="toc-bot">Bot</h2>
-      <li><a href="#what-is-bot-used-for">What is the bot used for?</a></li>
+      <li><a href="#what-is-bot-used-for">What is bot used for?</a></li>
       <li><a href="#what-information-are-collected">What information are collected?</a></li>
       <li><a href="#does-the-bot-steal-my-chats">Does the bot steal my chats?</a></li>
       <li><a href="#why-does-the-bot-have-different-mxid">Why does the bot have different MXID for each homeserver?</a></li>
