--- a/source/room_stats/templates/room_stats/homeserver_details.html
+++ b/source/room_stats/templates/room_stats/homeserver_details.html
@@ -13,7 +13,11 @@
 {% endblock %}
 
 {% block content %}
-  <h1>{{ server.hostname }} homeserver details</h1>
-  <div id="healthmap"></div>
+  <h1 style="text-align: center">{{ server.hostname }} homeserver details</h1>
+
+
+  <div class="healthmap">
+  </div>
+
 
 {% endblock content %}
