Fix healthmap hostname bug.

--- a/source/room_stats/templates/room_stats/homeserver_details.html
+++ b/source/room_stats/templates/room_stats/homeserver_details.html
@@ -16,7 +16,7 @@
   <h1 style="text-align: center">{{ server.hostname }} homeserver details</h1>
 
 
-  <div class="healthmap">
+  <div class="healthmap" data-hostname="{{ server.hostname }}">
   </div>
 
 
