--- a/source/room_stats/templates/room_stats/faq.html
+++ b/source/room_stats/templates/room_stats/faq.html
@@ -26,6 +26,7 @@
       <li><a href="#does-the-bot-put-a-high-load">Does the bot put a high load on my server?</a></li>
 
       <h2 id="toc-homeservers">Homeservers</h2>
+      <li><a href="#why-sync-is-turned-off">Why sync is turned off for my server?</a></li>
       <li><a href="#how-homeservers-are-discovered">How homeservers are discovered?</a></li>
       <li><a href="#how-uptime-is-calculated">How uptime is calculated?</a></li>
       <li><a href="#what-does-status-mean">What does status mean and how to change it?</a></li>
@@ -78,6 +79,12 @@
 
 
     <h2 id="homeservers">Homeservers</h2>
+
+    <div id="why-sync-is-turned-off">
+      <h3>Why sync is turned off for my server?</h3>
+      <p>We turned off sync functionality for most homeservers due to fact it can be abused. The bot can be exploited by homeserver users to organise denial of service attack that can't be easily prevented. We are working on mechanism to prevent this, however, it can take some time.</p>
+      <p>If you interested in sync functionality, please, send a <a href="https://matrix.to/#/#matrixstats:matrix.org" target="_blank">message</a>. We will turn it on, and the bot can be invited to the rooms and gather healthmap and statistical data.
+    </div>
 
     <div id="how-homeservers-are-discovered">
       <h3>How homeservers are discovered?</h3>
