Last commit fix.

--- a/source/room_stats/templates/room_stats/faq.html
+++ b/source/room_stats/templates/room_stats/faq.html
@@ -83,7 +83,7 @@
     <div id="why-sync-is-turned-off">
       <h3>Why sync is turned off for my server?</h3>
       <p>We turned off sync functionality for most homeservers due to fact it can be abused. The bot can be exploited by homeserver users to organise denial of service attack that can't be easily prevented. We are working on mechanism to prevent this, however, it can take some time.</p>
-      <p>If you interested in sync functionality, please, send a <a href="https://matrix.to/#/#matrixstats:matrix.org" target="_blank">message</a>. We will turn it on, and the bot can be invited to the rooms and gather healthmap and statistical data.
+      <p>If you interested in sync functionality, please, send us a <a href="https://matrix.to/#/#matrixstats:matrix.org" target="_blank">message</a>. We will turn the sync on, and the bot can be invited to the rooms and gather healthmap and statistical data.
     </div>
 
     <div id="how-homeservers-are-discovered">
