Extend /about page. Add ru-matrix.org community.

--- a/source/room_stats/templates/room_stats/about.html
+++ b/source/room_stats/templates/room_stats/about.html
@@ -19,6 +19,10 @@
 
     <h2>Related projects</h2>
     A lot of interesting matrix projects can be found in <a href="https://riot.im/app/#/group/+community:matrix.org">+community:matrix.org</a> and <a href="https://riot.im/app/#/group/+matrix-community:kamax.io">+matrix-community:kamax.io</a> groups. <a href="https://matrix.org/docs/projects/try-matrix-now.html">Try Matrix Now</a> page is also available.
+    <br><br><b>International communities:</b>
+    <ul>
+      <li>[RU] <a href="https://ru-matrix.org">ru-matrix.org - Русскоязычное сообщество протокола [matrix]</a></li>
+    </ul>
 
     <h2>Contacts</h2>
     If you want to share some thoughts or ideas, please, consider the following contacts:
