Change registration forms to crispy.

--- a/source/user_area/static/user_area/main.css
+++ b/source/user_area/static/user_area/main.css
@@ -10,6 +10,11 @@ body {
   justify-content: center;
 }
 
+.frame {
+  padding: 60px 30px;
+  margin-bottom: 15%;
+}
+
 .asteriskField {
   display: none;
 }
