--- a/source/user_area/templates/user_area/auth/password_change_done.html
+++ b/source/user_area/templates/user_area/auth/password_change_done.html
@@ -2,7 +2,8 @@
 
 {% block content %}
 
-Your password was successfully changed.
+<p> Your password was successfully changed.</p>
+
 <br>
 <a href="{% url 'uarea:index' %}">Main page</a>
 
