--- a/source/user_area/templates/user_area/auth/password_reset_done.html
+++ b/source/user_area/templates/user_area/auth/password_reset_done.html
@@ -1,5 +1,7 @@
 {% extends "user_area/auth/base.html" %}
 
+{% block header %}{% endblock %}
+
 {% block content %}
 
 <p>We've emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly.</p>
