--- a/source/user_area/templates/user_area/reg/registration_complete.html
+++ b/source/user_area/templates/user_area/reg/registration_complete.html
@@ -1,1 +1,8 @@
-Registration complete
+{% extends "user_area/auth/base.html" %}
+{% load crispy_forms_tags %}
+
+{% block header %}MatrixStats registration{% endblock %}
+
+{% block content %}
+  Email was sent to given address.
+{% endblock %}
