--- a/source/user_area/templates/user_area/auth/base.html
+++ b/source/user_area/templates/user_area/auth/base.html
@@ -22,7 +22,7 @@
     <div class="wrapper">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-6">
+        <div class="col-6 frame">
           <h1 class="mt-2">{% block header %}{% endblock %}</h1>
           <hr class="mt-0 mb-4">
           {% block content %}
