--- a/source/user_area/templates/user_area/auth/password_change.html
+++ b/source/user_area/templates/user_area/auth/password_change.html
@@ -1,29 +1,8 @@
 {% extends "user_area/auth/base.html" %}
+{% load crispy_forms_tags %}
+
+{% block header %}Change password{% endblock %}
 
 {% block content %}
-
-<form method="post">
-  {% csrf_token %}
-
-  <div class="form-row">
-    {{ form.old_password.errors }}
-    {{ form.old_password.label_tag }} {{ form.old_password }}
-  </div>
-
-  <div class="form-row">
-    {{ form.new_password1.errors }}
-    {{ form.new_password1.label_tag }} {{ form.new_password1 }}
-  </div>
-
-  <div class="form-row">
-    {{ form.new_password2.errors }}
-    {{ form.new_password2.label_tag }} {{ form.new_password2 }}
-  </div>
-
-  <div class="submit-row">
-      <input type="submit" value="Change my password" class="default">
-  </div>
-
-</form>
-
+  {% crispy form %}
 {% endblock %}
