--- a/source/user_area/templates/user_area/auth/password_reset.html
+++ b/source/user_area/templates/user_area/auth/password_reset.html
@@ -1,19 +1,8 @@
 {% extends "user_area/auth/base.html" %}
+{% load crispy_forms_tags %}
+
+{% block header %}Reset password{% endblock %}
 
 {% block content %}
-
-<p>Forgotten your password? Enter your email address below, and we'll email instructions for setting a new one.</p>
-
-<form method="post">
-  {% csrf_token %}
-  <fieldset class="module aligned">
-    <div class="form-row field-email">
-      {{ form.email.errors }}
-      <label for="id_email">Email address:</label>
-      {{ form.email }}
-    </div>
-    <input type="submit" value="Reset my password">
-  </fieldset>
-</form>
-
+  {% crispy form %}
 {% endblock %}
