--- a/source/user_area/templates/user_area/auth/password_reset_complete.html
+++ b/source/user_area/templates/user_area/auth/password_reset_complete.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<p>Your password has been set.  You may go ahead and log in now.</p>
+<p>Your password has been set. You may log in now.</p>
 
 <p><a href="{{ login_url }}">Log in</a></p>
 
