Fix registration templates.

--- a/source/user_area/templates/user_area/reg/activation_complete.html
+++ b/source/user_area/templates/user_area/reg/activation_complete.html
@@ -1,1 +1,10 @@
-Activation complete
+{% extends "user_area/auth/base.html" %}
+{% load crispy_forms_tags %}
+
+{% block header %}{% endblock %}
+
+{% block content %}
+<p>Registration was successfully completed</p>
+<br>
+<a href="{% url 'uarea:index' %}">Main page</a>
+{% endblock %}
