Add django-celery-email backend.

--- a/source/user_area/templates/user_area/reg/registration_complete.html
+++ b/source/user_area/templates/user_area/reg/registration_complete.html
@@ -4,5 +4,5 @@
 {% block header %}MatrixStats registration{% endblock %}
 
 {% block content %}
-<p>An email with activation link was sent to provided address.</p>
+<p>An email with activation link was sent to the given address.</p>
 {% endblock %}
