--- a/source/user_area/templates/user_area/auth/email/password_reset_body.html
+++ b/source/user_area/templates/user_area/auth/email/password_reset_body.html
@@ -1,7 +1,4 @@
-{% load i18n %}
-
-{% autoescape off %}
-You're receiving this email because you requested a password reset for your user account at {{ site_name }}
+{% load i18n %}{% autoescape off %}You're receiving this email because you requested a password reset for your user account at {{ site_name }}
 
 Please go to the following page and choose a new password:
 
