--- a/source/user_area/templates/user_area/base.html
+++ b/source/user_area/templates/user_area/base.html
@@ -36,19 +36,11 @@
       </div>
 
       <ul class="nav navbar-top-links navbar-right">
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-            <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
+        <li>{{ user.username }}</li>
+        <li>
+          <a href="{% url 'uarea:logout' %}">
+            <i class="fa fa-sign-out fa-fw"></i> Logout
           </a>
-          <ul class="dropdown-menu dropdown-user">
-            <li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
-            </li>
-            <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
-            </li>
-            <li class="divider"></li>
-            <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
-            </li>
-          </ul>
         </li>
       </ul>
 
