--- a/source/user_area/templates/user_area/base.html
+++ b/source/user_area/templates/user_area/base.html
@@ -17,6 +17,7 @@
   <link href="{% static 'vendor/metisMenu/metisMenu.min.css' %}" rel="stylesheet">
   <link href="{% static 'dist/css/sb-admin-2.css' %}" rel="stylesheet">
   <link href="{% static 'vendor/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
+  <link href="{% static 'user_area/main.css' %}" rel="stylesheet" type="text/css">
 
 </head>
 
@@ -82,6 +83,17 @@
           <h1 class="page-header">{% block header %}Index page{% endblock %}</h1>
         </div>
       </div>
+
+      {% if messages %}
+        <div class="row">
+          {% for message in messages %}
+            <div class="col-lg-12">
+              <div class="alert alert-{{ message.tags }}">{{ message|safe }}</div>
+            </div>
+          {% endfor %}
+        </div>
+      {% endif %}
+
       <div class="row">
         {% block content %}
         {% endblock %}
