Add changes to base template.

--- a/source/room_stats/templates/room_stats/base.html
+++ b/source/room_stats/templates/room_stats/base.html
@@ -55,6 +55,16 @@
     </nav>
 
     <div class="{% block content_class %}content-container{% endblock %}">
+      <div class="warning-caption">
+        <b>Matrixstats is shutting down Nov 20, 2018</b><br><br>
+
+        The current project scope become too large. A lot of moderation efforts required to maintain the catalog in a good shape. It quickly becomes unnaceptable for a new members.<br><br>
+
+        While it's possible to continue without changes, the service is starting to conflict with initial project goals. It's not the practice we appreciate much.<br><br>
+
+        Thank you for using the service.
+      </div>
+
       {% block content %}
       {% endblock content %}
     </div>
