--- a/source/room_stats/static/css/main.css
+++ b/source/room_stats/static/css/main.css
@@ -21,6 +21,11 @@ h1 > a {
   font-size: 24px;
 }
 
+.warning-caption {
+  border: 3px firebrick solid;
+  padding: 30px 20px;
+}
+
 .content-container {
   max-width: 1030px;
   margin: auto;
